--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="matheus.com.br.bloqueargentechata">
+    package="matheus.com.br.bloquearnumerochato">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".model.activity.MainActivity"
+            android:name="matheus.com.br.bloquearnumerochato.model.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,13 +23,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".model.util.PhoneStateReceiver">
+        <receiver android:name="matheus.com.br.bloquearnumerochato.model.util.PhoneStateReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
 
-        <activity android:name=".model.activity.AddToBlacklistActivity" android:parentActivityName=".model.activity.MainActivity"/>
+        <activity android:name="matheus.com.br.bloquearnumerochato.model.activity.AddToBlacklistActivity" android:parentActivityName="matheus.com.br.bloquearnumerochato.model.activity.MainActivity"/>
 
     </application>
 
